# android_vendor_qcom_opensource_omx_mm-video

./: Android.mk  Makefile  Makefile.am  configure.ac
DivxDrmDecrypt/: Android.mk
DivxDrmDecrypt/inc/: DivXDrmDecrypt.h
DivxDrmDecrypt/src/: DivXDrmDecrypt.cpp
qdsp6/vdec/: Android.mk
qdsp6/vdec/src/: MP4_Utils.cpp  MP4_Utils.h  omx_vdec.cpp  omx_vdec.h  vdec.cpp
qdsp6/vdec/test/: lasic_control.h  omx_vdec_test.cpp
qdsp6/venc/device/inc/: venc_device.h
qdsp6/venc/device/src/: venc_device.c
qdsp6/venc/omx/src/: OMX_Venc.cpp
qdsp6/venc/test/common/src/: venctest_Encoder.cpp
vidc/common/inc/: extra_data_handler.h
vidc/common/src/: extra_data_handler.cpp
vidc/vdec/: Android.mk  Makefile  Makefile.am  vdec.mk
vidc/vdec/inc/: frameparser.h  h264_utils.h  mp4_utils.h  omx_vdec.h  ts_parser.h
vidc/vdec/src/: frameparser.cpp  h264_utils.cpp  mp4_utils.cpp  omx_vdec.cpp  ts_parser.cpp
vidc/vdec/test/: decoder_driver_test.c  omx_vdec_test.cpp
vidc/venc/: Android.mk  Makefile.am
vidc/venc/inc/: omx_video_base.h  omx_video_common.h  omx_video_encoder.h  video_encoder_device.h
vidc/venc/src/: omx_video_base.cpp  omx_video_encoder.cpp  video_encoder_device.cpp
vidc/venc/test/: venc_test.cpp  video_encoder_test.c
